namespace CalculadorHash.Services
{
    public interface ICalculadorHash
    {
        string CalcularHash(string arquivo);
    }
}
